<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.asciidoctor.maven</groupId>
    <artifactId>asciidoclet</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>AsciiDoclet Example</name>
    <description>An example project that demonstrates using Asciidoclet.
    </description>

    <build>
        <defaultGoal>process-resources</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.3</version>
                <configuration>
                    <source>17</source>
                    <additionalJOptions>
                        <additionalJOption>-J-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005</additionalJOption>
                        <!-- Not necessary if the below are there
                        <additionalJOption>- -add-exports=jdk.javadoc/jdk.javadoc.internal.tool=asciidoclet</additionalJOption>
                        <additionalJOption>- -add-exports=jdk.compiler/com.sun.tools.javac.parser=asciidoclet</additionalJOption>
                        <additionalJOption>- -add-exports=jdk.compiler/com.sun.tools.javac.tree=asciidoclet</additionalJOption>
                        <additionalJOption>- -add-exports=jdk.compiler/com.sun.tools.javac.model=asciidoclet</additionalJOption>
                        -->
                        <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
                        <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</additionalJOption>
                        <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</additionalJOption>
                        <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</additionalJOption>
                        <!-- Java 17/21 -->
                        <additionalJOption>--add-opens=jdk.compiler/com.sun.tools.javac.api=asciidoclet</additionalJOption>
                        <additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</additionalJOption>
                        <additionalJOption>--add-opens=jdk.compiler/com.sun.tools.javac.parser=asciidoclet</additionalJOption>
                        <additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</additionalJOption>
                        <additionalJOption>-Xdoclint:all,-html,-accessibility</additionalJOption>
                    </additionalJOptions>
                    <doclet>org.asciidoctor.asciidoclet.Asciidoclet</doclet>
                    <docletArtifacts>
                        <docletArtifact>
                            <groupId>org.asciidoctor</groupId>
                            <artifactId>asciidoclet</artifactId>
                            <version>2.0.0-SNAPSHOT</version>
                            <classifier>shaded</classifier>
                        </docletArtifact>
                    </docletArtifacts>
                    <overview>src/main/java/overview.adoc</overview>
                    <header>My header</header>
                    <additionalOptions>  <!--1-->
                        --base-dir ${project.basedir}
                        --attribute "project_name=${project.name}"
                        --attribute "project_version=${project.version}"
                        --attribute "project_description=${project.description}"
                        --attributes-file "src/main/java/asciidoclet-attributes.adoc"
                    </additionalOptions>
                    <includes></includes>
                </configuration>
                <dependencies>
                    <!--
                    <dependency>
                        <groupId>org.asciidoctor</groupId>
                        <artifactId>asciidoctorj</artifactId>
                        <version>1.5.8.1</version>
                    </dependency>
                    -->
                </dependencies>
            </plugin>
        </plugins>
    </build>
</project>
